# apalis-surrealdb

./: Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml  release.yml  security.yml
examples/: basic.rs  codec.rs  realtime.rs  scheduled.rs  shared.rs  unique_jobs.rs
queries/backend/: fetch_by_id.surql  fetch_completed_tasks.surql  fetch_next.surql  fetch_next_shared.surql  keep_alive.surql  list_all_jobs.surql  list_all_workers.surql  list_jobs.surql  list_queues.surql  list_workers.surql  overview.surql  overview_by_queue.surql  reenqueue_orphaned.surql  register_worker.surql  vacuum.surql
queries/task/: ack_task.surql  kill_task.surql  lock_task.surql  push_tasks.surql
src/: ack.rs  errors.rs  fetcher.rs  from_row.rs  lib.rs  schema.surql  shared.rs  sink.rs
src/queries/: ack_task.rs  fetch_by_id.rs  fetch_next.rs  fetch_next_shared.rs  keep_alive.rs  kill_task.rs  list_queues.rs  list_tasks.rs  list_workers.rs  lock_task.rs  metrics.rs  mod.rs  push_tasks.rs  reenqueue_orphaned.rs  register_worker.rs  vacuum.rs  wait_for.rs
