[package]
name = "apalis-surrealdb"
version = "0.1.0"
readme = "README.md"
edition = "2024"
repository = "https://github.com/apalis-dev/apalis-surrealdb"
license = "MIT"
description = "Background task processing for rust using apalis and surrealdb"
keywords = ["apalis", "background-jobs", "task-queue", "surrealdb", "async"]
categories = ["asynchronous", "database", "network-programming"]
publish = true

[dependencies]
apalis-core = { version = "1.0.0-rc.9", features = ["sleep"] }
apalis-sql = { version = "1.0.0-rc.9", default-features = false, features = ["chrono"] }
apalis-codec = { version = "0.1.0-rc.9", default-features = false, features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.30"
log = "0.4.21"
pin-project = "1.1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = "3.2.1"
thiserror = "2"
ulid = { version = "1", features = ["serde"] }


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.31"
surrealdb = { version = "3.2.1", features = ["kv-mem"] }
apalis-codec = { version = "0.1.0-rc.9", features = ["msgpack"] }


[package.metadata.docs.rs]
#defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
all-features = true


[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
type_complexity = "allow"
manual_let_else = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
must_use_candidate = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
redundant_clone = "warn"
